Incled UI pages and rest of James' work