@@ -30,6 +30,12 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -57,6 +63,12 @@
 				<version>21</version>
 			</dependency>
 
+			<dependency>
+    <groupId>org.controlsfx</groupId>
+    <artifactId>controlsfx</artifactId>
+    <version>11.1.2</version>
+</dependency>
+
 		
 
 	</dependencies>
@@ -67,6 +79,22 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+
+			<plugin>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-maven-plugin</artifactId>
+    <version>0.0.8</version>
+    <configuration>
+        <mainClass>com.winestore.inventory_system.InventorySystemApplication</mainClass>
+        <options>
+            <option>--add-exports</option>
+            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
+            <option>--add-exports</option>
+            <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>
+        </options>
+    </configuration>
+</plugin>
 		</plugins>
 	</build>
 
